Fix unnecessary horizontal scrolling on mobile view by limiting background decorations to min-width 1200px only

--- a/style.css
+++ b/style.css
@@ -1078,6 +1078,8 @@ li.ping::after {
 	max-width: 1200px;
 	position: relative;
 	}
+	
+@media (min-width: 1200px) {
 
 	/* start background decoration shapes */
 	.page-container > .wrap::before,
@@ -1106,6 +1108,8 @@ li.ping::after {
 		right: auto;
 	}
 	/* end background decoration shapes */
+	
+} /* end @media min-width 1200 */
 	
 	/* macro layout grouping */
 	#header,
